--- a/css/style.css
+++ b/css/style.css
@@ -892,7 +892,203 @@ hr {
    text-decoration: underline;
 }
 
+/* Footer */
+.footer {
+   padding-top: 65px;
+   background: #f8f8f8;
+}
 
+.footer__inner {
+   padding-bottom: 65px;
+
+   display: flex;
+   justify-content: space-between;
+}
+
+.footer__col_first {
+   width: 40%;
+}
+
+.footer__col_second {
+   width: 29%;
+}
+
+.footer__col_third {
+   width: 22%;
+}
+
+.footer__title {
+   text-transform: uppercase;
+   font-size: 14px;
+   color: #333333;
+
+   margin: 30px 0;
+}
+
+.footer__logo {
+   color: #ccc;
+   font-size: 46px;
+   font-weight: 700;
+
+   margin-bottom: 30px;
+}
+
+.footer__text {
+   font-size: 15px;
+   color: #999;
+
+   margin-bottom: 30px;
+}
+
+.footer__social-header {
+   font-size: 14px;
+   color: #333;
+
+   border-bottom: 1px solid #e5e5e5;
+   padding-bottom: 15px;
+}
+
+.footer__social-header b {
+   font-size: 18px;
+}
+
+.footer__social-content {
+   padding-top: 15px;
+   margin-bottom: 25px;
+
+   font-size: 15px;
+   color: #999;
+   font-weight: 300;
+   font-style: italic;
+}
+
+.footer__social-content a {
+   font-size: 18px;
+   display: inline-block;
+   vertical-align: middle;
+   color: #95e1d3;
+
+   margin-left: 10px;
+}
+
+/* Subscribe */
+.subscribe {
+   width: 100%;
+   max-width: 380px;
+   display: flex;
+}
+
+.subscripe__input {
+   width: 60%;
+   height: 40px;
+
+   background-color: #ffffff;
+   border: 1px solid #e7e7e7;
+   border-right: 0;
+   padding: 12px;
+
+   font-size: 15px;
+   line-height: 1.1;
+   font-weight: 300;
+   font-style: italic;
+   color: #333;
+   font-family: 'Montserrat', sans-serif;
+}
+
+.subscripe__input::placeholder {
+   color: #ccc;
+}
+
+.subscripe__btn {
+   width: 40%;
+   height: 40px;
+
+   font-family: 'Montserrat', sans-serif;
+   font-size: 14px;
+   line-height: 1.1;
+   font-weight: 700;
+   color: #fff;
+   text-transform: uppercase;
+
+   background-color: #95e1d3;
+   border: none;
+   padding: 12px 30px;
+   cursor: pointer;
+
+   transition: background-color .2s linear;
+}
+
+.subscripe__btn:hover  {
+   background-color: #74c7b8;
+}
+
+/* Blogs */
+.blogs__item {
+   display: flex;
+   align-items: center;
+
+   margin-bottom: 30px;
+}
+
+.blogs__img {
+   width: 120px;
+   height: 80px;
+}
+
+.blogs__content {
+   padding-left: 20px;
+}
+
+.blogs__title {
+   display: block;
+
+   color: #333;
+   font-size: 12px;
+   text-transform: uppercase;
+   line-height: 1.5;
+   margin-bottom: 5px;
+}
+
+.blogs__title:hover {
+   text-decoration: underline;
+}
+
+.blogs__date {
+   font-size: 13px;
+   color: #999;
+   font-style: italic;
+   font-weight: 300;
+}
+
+/* Instagram */
+.instagram {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+}
+
+.instagram__item {
+   width: 32.33333%;
+   border-bottom: 1px solid #fff;
+}
+
+.instagram__item img {
+   display: block;
+}
+
+/* Copyright */
+.copyright {
+   padding: 20px 0;
+   border-top: 1px solid #e5e5e5;
+   text-align: center;
+
+   font-size: 14px;
+   color: #333;
+}
+
+.copyright span {
+   color: #f38181;
+}
 
 
 
