--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,8 @@ hr {
 /* Container */
 .container {
    width: 100%;
-   max-width: 1200px;
+   max-width: 1230px;
+   padding: 0 15px;
    margin: 0 auto;
 }
 
@@ -312,16 +313,20 @@ hr {
 /*  Card */
 .card {
    display: flex;
+   flex-wrap: wrap;
    justify-content: space-between;
 
-   margin-top: 80px;
+   margin: 80px -15px 0;
+}
+
+.card__inner {
+   position: relative;
+   background-color: #95e1d3;
 }
 
 .card__item {
-   position: relative;
-   width: 380px;
-
-   background-color: #95e1d3;
+   width: 33.33333%;
+   padding: 0 15px;
 }
 
 .card__item:hover .card__text {
@@ -339,8 +344,9 @@ hr {
 
 .card__img img {
    transition: opacity .2s linear;
-
    display: block;
+   max-width: 100%;
+   height: auto;
 }
 
 .card__item:hover .card__img img {
@@ -391,6 +397,7 @@ hr {
 
 .stat__inner {
    display: flex;
+   flex-wrap: wrap;
 }
 
 .stat__item {
@@ -423,15 +430,20 @@ hr {
 
 .srvices {
    display: flex;
+   flex-wrap: wrap;
 }
 
 .services__item {
-   flex: 1 1 0;
+   width: 33.33333%;
 
    position: relative;
 
-   padding-left: 85px;
-   padding-right: 35px;
+   padding:  0 35px 40px 85px;
+   margin-bottom: 40px;
+}
+
+.services_border {
+   border-bottom: 1px solid #e5e5e5;
 }
 
 .services__icon {
@@ -465,6 +477,8 @@ hr {
 
 .devices__item {
    display: block;
+   max-width: 100%;
+   height: auto;
 }
 
 .devices_iphone {
@@ -477,10 +491,18 @@ hr {
 /* We do */
 .wedo {
    display: flex;
+   flex-wrap: wrap;
+   margin: 0 -15px;
 }
 
 .wedo__item {
    width: 50%;
+   padding: 0 15px;
+}
+
+.wedo__img {
+   max-width: 100%;
+   height: auto;
 }
 
 /* Accordion */
@@ -1090,6 +1112,171 @@ hr {
    color: #f38181;
 }
 
+/* Media */
+@media (max-width: 1230px) {
+   /* Intro */
+   .intro__title {
+      font-size: 120px;
+   }
+
+   .intro__suptitle {
+      font-size: 52px;
+   }
+}
+
+@media (max-width: 990px) {
+   /* Intro */
+   .intro__title {
+      font-size: 80px;
+   }
+   
+   .intro__suptitle {
+      font-size: 32px;
+   }
+
+   /* Stat */
+   .stat__inner {
+      justify-content: center;
+   }
+
+   .stat__item {
+      flex: none;
+      width: 33.33333%;
+      border: none;
+   }
+
+   .stat__item:last-child {
+      border: none;
+   }
+
+   /* Services */
+   .services__item  {
+      width: 50%;
+      padding-bottom: 0;
+   }
+
+   .services_border {
+      border-bottom: 0;
+   }
+}
+
+@media (max-width: 770px) {
+   /* Nav */
+   .nav {
+      display: none;
+   }
+
+   /* Slider */
+   .slider__text {
+      display: none;
+   }
+
+   .slider__item.active::before {
+      width: 50%;
+   }
+
+   /* Section */
+   .section {
+      padding: 40px 0;
+   }
+
+   .section_design {
+      padding-bottom: 0;
+   }
+   /* Card */
+   .card {
+      margin-top: 50px;
+      justify-content: center;
+   }
+   .card__item {
+      width: 100%;
+      max-width: 410px;
+      margin-bottom: 30px;
+      padding-bottom: 30px;
+
+   }
+
+   .card__item:last-child {
+      margin-bottom: 0;
+   }
+
+      /* Services */
+      .srvices {
+         justify-content: center;
+      }
+      
+      .services__item  {
+         width: 100%;
+         max-width: 400px;
+         padding-left: 55px;
+         padding-right: 0;
+      }
+
+      .services__icon {
+         left: 0;
+      }
+
+      /*Wedo*/
+      .wedo__img {
+         display: none;
+      }
+
+      .wedo__item {
+         width: 100%;
+      }
+}
+
+@media (max-width: 575px) {
+   /* Intro */
+   .intro__title {
+      font-size: 40px;
+   }
+   
+   .intro__suptitle {
+      font-size: 22px;
+   }
+
+   /* Section */
+   .section__header {
+      margin-bottom: 50px;
+   }
+
+   .section__title {
+      font-size: 24px;
+   }
+
+   .section__suptitle {
+      font-size: 20px;
+   }
+
+   .section__title::after {
+      margin: 20px auto;
+   }
+
+   /* Stat */
+   .stat__item {
+      width: 100%;
+      border-bottom: 1px solid #b5eae0;
+   }
+   .stat__item:last-child {
+      border-bottom: 0;
+   }
+
+   .stat__numb {
+      font-size: 52px;
+   }
+
+   /* Design */
+   .devices {
+      max-width: 320px;
+   }
+
+   .devices_iphone {
+      max-width: 180px;
+      bottom: -50px;
+      right: -80px;
+   }
+}
 
 
 
